Added API Documentation
