# routes/index.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 
 // router.use('/recipes', require('./recipe'));
 // router.use('/users', require('./user'));
-// router.use('/modifications', require('./modification'));
+router.use('/modifications', require('./modification'));
 router.use('/comments', require('./comment'));
 
 
